--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,29 @@
 		</div>
 		<div id="menu" class="container">
 			<ul>
-				<li class="current_page_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
-				<li><a href="#" accesskey="1" title="">Навчання</a></li>
-				<li><a href="#" accesskey="2" title="">Виховання</a></li>
-				<li><a href="#" accesskey="3" title="">Новини</a></li>
-				<li><a href="#" accesskey="4" title="">Випускнику</a></li>
-				<li><a href="contact.html" accesskey="5" title="">Контакти</a></li>
+				<li class="current_page_item menu_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
+				<li class="menu_item"><a href="#" accesskey="1" title="">Навчання</a>
+
+					<ul>
+						<li><a href="#">Розклад</a></li>
+						<li><a href="#">Рейтинг учнів</a></li>
+						<li><a href="#">ДПА</a></li>
+						<li><a href="#">Бібліотека</a></li>
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
+
+					<ul>
+						<li><a href="#">План виховної роботи</a></li>
+						<li><a href="#">Виховні заходи</a></li>
+						<li><a href="#">Предметні тижні</a></li>
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="#" accesskey="3" title="">Новини</a></li>
+				<li class="menu_item"><a href="#" accesskey="4" title="">Випускнику</a></li>
+				<li class="menu_item"><a href="contact.html" accesskey="5" title="">Контакти</a></li>
 			</ul>
 		</div>
 	</div>
