--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <title>Циклова комісія</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="fonts/SourceSansPro.css" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="media.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+
 
 </head>
 <body>
@@ -27,52 +29,77 @@
 			</div>
 		</div>
 		<div id="menu" class="container">
-			<ul>
-				<li class="current_page_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
-				<li><a href="#" accesskey="1" title="">Навчання</a></li>
-				<li><a href="#" accesskey="2" title="">Виховання</a></li>
-				<li><a href="#" accesskey="3" title="">Новини</a></li>
-				<li><a href="#" accesskey="4" title="">Випускнику</a></li>
-				<li><a href="contact.html" accesskey="5" title="">Контакти</a></li>
+
+			<i class="mobile_menu">=</i>
+			<ul class="menu">
+				<li class="current_page_item menu_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
+				<li class="menu_item"><a href="#" accesskey="1" title="">Навчання</a>
+
+					<ul>
+						<li><a href="#">Розклад</a></li>
+						<li><a href="#">Рейтинг учнів</a></li>
+						<li><a href="#">ДПА</a></li>
+						<li><a href="#">Бібліотека</a></li>
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
+
+					<ul>
+						<li><a href="#">План виховної роботи</a></li>
+						<li><a href="#">Виховні заходи</a></li>
+						<li><a href="#">Предметні тижні</a></li>
+						
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="news.html" accesskey="3" title="">Новини</a></li>
+				<li class="menu_item"><a href="jurnal.html" accesskey="4" title="">Журнал ЦК</a></li>
+				<li class="menu_item"><a href="contact.html" accesskey="5" title="">Контакти</a></li>
 			</ul>
 		</div>
 	</div>
+
+		<div>
+			<h2 align="center" style="color:#ff0000">Методична проблема циклової комісії: "Створення інформаційно-Освітнього середовища для формування професійних знань та вмінь майбутніх кваліфіованих робітників"</h2>
+			<h1 align="center" style="color:#3c6ca1">Навчаємо за такими професіями : </h1>
+		</div>
+
 	<div id="page" class="container">
-		<div class="column2">
+		
+		<div class="column2 page-col">
+
 			<div class="title">
-				<h2>Секретар керівника <br> (організації,підприємства)</h2>
+				<h2>Секретар керівника (організації, підприємства)</h2>
 			</div>
 			<a href="sekretar.html" target="_blank">
-			<img src="images/pic01.jpg" width="282" height="150" alt="" />
-			<p></p>
+			<img src="images/pic01.jpg" alt="" /></a>
 		</div>
-		<div class="column3">
+		<div class="column3 page-col">
 			<div class="title">
 				<h2>Оператор комп'ютерного набору</h2>
 			</div>
 
 			<a href="nabor.html" target="_blank">
-			<img src="images/pic02.jpg" width="282" height="150" alt="" />
-			<p></p>
+			<img src="images/pic02.jpg" alt="" /></a>
 		</div>
-		<div class="column4">
+		<div class="column4 page-col">
 			<div class="title">
 				<h2>Оператор комп'ютерної верстки</h2>
 			</div>
 			<a href="okv.html" target="_blank">
-			<img src="images/pic04.jpg" width="282" height="150" alt="" />
-			<p></p>
+			<img src="images/pic04.jpg" alt="" /></a>
 		</div>
-		<div class="column5">
+		<div class="column5 page-col">
 			<div class="title">
-				<h2>Оператор з обробки інформації <br>та програмного забезпечення</h2>
+				<h2>Оператор з обробки інформації та програмного забезпечення</h2>
 			</div>
 			<a href="ooi.html" target="_blank">
-			<img src="images/pic03.jpg"  width="282" height="150" alt="" />
-		</a>
-			<p></p>
+			<img src="images/pic03.jpg"  alt="" /></a>
 		</div>
 	</div>
+<div>
+</div>
 	
 <div id="footer">
 	<p>&copy; Запрошуємо до нас на навчання <a href="http://kvpu.co.ua/index.php?option=com_content&view=category&layout=blog&id=41&Itemid=313"  target="_blank">  Конотопське ВПУ</a>.</p>
