--- a/news.html
+++ b/news.html
@@ -43,10 +43,10 @@
 				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
 
 					<ul>
-						<li><a href="#">Плани виховної роботи</a></li>
+						<li><a href="#">План виховної роботи</a></li>
 						<li><a href="#">Виховні заходи</a></li>
-						<li><a href="#">Спортивні секції</a></li>
-						<li><a href="#">Самодіяльні гуртки</a></li>
+						<li><a href="#">Предметні тижні</a></li>
+						
 					</ul>
 
 				</li>
@@ -59,16 +59,33 @@
 	<div class="text1 text">
 		<br>
 		<br>
-		<h3><b>Оператор з обробки інформації та програмного забезпечення</b></h3>
-		Оператор з обробки інформації та програмного забезпечення – це
-		висококваліфікований робітник, який вміє не тільки працювати з офісними додатками
-		(текстовим редактором, електронними таблицями, базами даних, графікою,
-		презентаціями), а й є технічним фахівцем в області інформаційних технологій.
-		Сферою професійного використання випускників даної професії є сервісні центри з
-		продажу та ремонту комп’ютерної, офісної та побутової техніки; Інтернет-
-		провайдери; фірми-розробники програмних продуктів; підприємства, установи та
-		організації всіх видів економічної діяльності.
+		<h3><b>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи
+	
+	</div>
+	<div id="page" class="container">
+		
+		<div class="column2 page-col">
 
+			<div class="title">
+				<h2>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</h2>
+			</div>
+			
+		</div>
+		<div class="column3 page-col">
+			<div class="title">
+				<h2>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</h2>
+			</div>		
+		</div>
+		<div class="column4 page-col">
+			<div class="title">
+				<h2>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</h2>
+			</div>
+		</div>
+		<div class="column5 page-col">
+			<div class="title">
+				<h2>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</h2>
+			</div>
+		</div>
 	</div>
 <div id="footer">
 	<p>&copy; Запрошуємо до нас на навчання <a href="http://kvpu.co.ua/index.php?option=com_content&view=category&layout=blog&id=41&Itemid=313"  target="_blank">  Конотопське ВПУ</a>.</p>
