--- a/jurnal.html
+++ b/jurnal.html
@@ -34,7 +34,7 @@
 
 					<ul>
 						<li><a href="#">Розклад</a></li>
-						<li><a href="#">Рейтинг Учнів</a></li>
+						<li><a href="#">Рейтинг учнів</a></li>
 						<li><a href="#">ДПА</a></li>
 						<li><a href="#">Бібліотека</a></li>
 					</ul>
@@ -43,10 +43,10 @@
 				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
 
 					<ul>
-						<li><a href="#">Плани виховної роботи</a></li>
+						<li><a href="#">План виховної роботи</a></li>
 						<li><a href="#">Виховні заходи</a></li>
-						<li><a href="#">Спортивні секції</a></li>
-						<li><a href="#">Самодіяльні гуртки</a></li>
+						<li><a href="#">Предметні тижні</a></li>
+						
 					</ul>
 
 				</li>
@@ -57,18 +57,7 @@
 		</div>
 	</div>
 	<div class="text1 text">
-		<br>
-		<br>
-		<h3><b>Оператор з обробки інформації та програмного забезпечення</b></h3>
-		Оператор з обробки інформації та програмного забезпечення – це
-		висококваліфікований робітник, який вміє не тільки працювати з офісними додатками
-		(текстовим редактором, електронними таблицями, базами даних, графікою,
-		презентаціями), а й є технічним фахівцем в області інформаційних технологій.
-		Сферою професійного використання випускників даної професії є сервісні центри з
-		продажу та ремонту комп’ютерної, офісної та побутової техніки; Інтернет-
-		провайдери; фірми-розробники програмних продуктів; підприємства, установи та
-		організації всіх видів економічної діяльності.
-
+		<iframe src="https://drive.google.com/file/d/1yM6TJcYsHnm4v7zpzuauTg1ZNmd1AjWC/preview" width="100%" height="680"></iframe>
 	</div>
 <div id="footer">
 	<p>&copy; Запрошуємо до нас на навчання <a href="http://kvpu.co.ua/index.php?option=com_content&view=category&layout=blog&id=41&Itemid=313"  target="_blank">  Конотопське ВПУ</a>.</p>
