--- a/sekretar.html
+++ b/sekretar.html
@@ -6,6 +6,7 @@
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="media.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 </head>
@@ -28,16 +29,34 @@
 		</div>
 		<div id="menu" class="container">
 			<ul>
-				<li class="current_page_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
-				<li><a href="#" accesskey="1" title="">Навчання</a></li>
-				<li><a href="#" accesskey="2" title="">Виховання</a></li>
-				<li><a href="#" accesskey="3" title="">Новини</a></li>
-				<li><a href="#" accesskey="4" title="">Випускнику</a></li>
-				<li><a href="contact.html" accesskey="5" title="">Контакти</a></li>
+				<li class="current_page_item menu_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
+				<li class="menu_item"><a href="#" accesskey="1" title="">Навчання</a>
+
+					<ul>
+						<li><a href="#">Розклад</a></li>
+						<li><a href="#">Рейтинг Учнів</a></li>
+						<li><a href="#">ДПА</a></li>
+						<li><a href="#">Бібліотека</a></li>
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
+
+					<ul>
+						<li><a href="#">Плани виховної роботи</a></li>
+						<li><a href="#">Виховні заходи</a></li>
+						<li><a href="#">Спортивні секції</a></li>
+						<li><a href="#">Самодіяльні гуртки</a></li>
+					</ul>
+
+				</li>
+				<li class="menu_item"><a href="news.html" accesskey="3" title="">Новини</a></li>
+				<li class="menu_item"><a href="jurnal.html" accesskey="4" title="">Журнал ЦК</a></li>
+				<li class="menu_item"><a href="contact.html" accesskey="5" title="">Контакти</a></li>
 			</ul>
 		</div>
 	</div>
-	<div class="text1">
+	<div class="text1 text">
 		<br>
 		<br>
 		<h3><b>СЕКРЕТАР КЕРІВНИКА (організації, підприємства, установи), обліковець з реєстрації бухгалтерських даних</b></h3>
