--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,25 @@
 <title>Циклова комісія</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
-
+<link href="fonts/font_awesome.css" rel="stylesheet" />
+<link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/media.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
+       <button onclick="topFunction()" id="myBtn" title="Go to top">Вгору</button>
 <div id="wrapper">
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
 				<div class="text1">
-					<h1>ДПТНЗ "Конотопське ВПУ"</h1>
+					<h1><span>ДПТНЗ</span> "<span>К</span>онотопське <span>ВПУ</span>"</h1>
 				</div>
 				
-				<h1><a href="#">  циклова комісія "Інформаційних технологій, комп'юторної та секретарської справи"</a></h1>
+				<h1><a href="#">  циклова комісія "<span>І</span>нформаційних технологій, комп'юторної та секретарської справи"</a></h1>
 			</div>
 			<div id="social">
 				<ul class="contact">
@@ -26,65 +30,104 @@
 				</ul>
 			</div>
 		</div>
-		<div id="menu" class="container">
-			<ul>
+        <div class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+  <div class="navbar-collapse collapse container" id="menu">
+			<ul class="menu nav navbar-nav">
 				<li class="current_page_item menu_item"><a href="index.html" accesskey="1" title="">Головна</a></li>
-				<li class="menu_item"><a href="#" accesskey="1" title="">Навчання</a>
-
-					<ul>
+				<li class="menu_item">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" accesskey="1" role="button" aria-haspopup="true" aria-expanded="false">Навчання<span class="caret"></span></a>
+					<ul class="dropdown-menu">
 						<li><a href="#">Розклад</a></li>
-						<li><a href="#">Рейтинг учнів</a></li>
+						<li><a href="#">Рейтинг Учнів</a></li>
 						<li><a href="#">ДПА</a></li>
 						<li><a href="#">Бібліотека</a></li>
 					</ul>
 
 				</li>
-				<li class="menu_item"><a href="#" accesskey="2" title="">Виховання</a>
-
-					<ul>
+				<li class="menu_item dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" accesskey="2"aria-haspopup="true" aria-expanded="false">Виховання<span class="caret"></span></a>
+					<ul class="dropdown-menu">
 						<li><a href="#">План виховної роботи</a></li>
 						<li><a href="#">Виховні заходи</a></li>
 						<li><a href="#">Предметні тижні</a></li>
 					</ul>
 
 				</li>
-				<li class="menu_item"><a href="#" accesskey="3" title="">Новини</a></li>
-				<li class="menu_item"><a href="#" accesskey="4" title="">Випускнику</a></li>
-				<li class="menu_item"><a href="contact.html" accesskey="5" title="">Контакти</a></li>
+				<li class="menu_item dropdown"><a href="news.html" accesskey="3" title="">Новини</a></li>
+				<li class="menu_item"><a href="jurnal.html" accesskey="4" title="">Журнал ЦК</a></li>
+				<li class="active menu_item"><a href="#" accesskey="5" title="">Контакти</a></li>
 			</ul>
+            </div>
+            </div>
 		</div>
 	</div>
 	<br>
 	<br>
-	
-	<div >
-		вул. 6 Вересня, 1<br>
-		м. Конотоп	<br>
-		Сумська область<br>
-		41600	<br>
-		Україна	<br>
+	<div class="container-fluid">
+        <div class="row">
+	   <div class="col-md-6 col-sm-12">
+            <div>
+                <p>вул. 6 Вересня, 1<br>
+                м. Конотоп<br>
+                Сумська область<br>
+                41600<br>
+                Україна</p>	
 	</div>
 
 		<div >
-		<p>Пошта metodist@kvpu.co.ua</p>
+		<p>Пошта <a href="mailto:metodist@kvpu.co.ua">metodist@kvpu.co.ua</a></p>
 		</div><br>
 
 		<div >
-		Телефон : (05447)6-06-90<br>
+		Телефон : <a href="tel:+380544760690">(05447)6-06-90</a><br>
 		
-		Телефон : (05447)6-06-90
+		Телефон : <a href="tel:+380544760690">(05447)6-06-90</a>
 	</div>
 
 	<br>
 	<br>
 
-
+            </div>
+            <div class="col-md-6 col-sm-12">
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2135.336047475015!2d33.187124015453065!3d51.21945397958883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x412a49c79fe7d427%3A0xee652d2ce8c77f58!2z0JTQn9Ci0J3QlyDQmtC-0L3QvtGC0L7Qv9GB0YzQutC1INCS0J_Qoy00!5e1!3m2!1sru!2sua!4v1540657695934" width="1310" height="450" frameborder="0" style="border:6" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2135.336047475015!2d33.187124015453065!3d51.21945397958883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x412a49c79fe7d427%3A0xee652d2ce8c77f58!2z0JTQn9Ci0J3QlyDQmtC-0L3QvtGC0L7Qv9GB0YzQutC1INCS0J_Qoy00!5e1!3m2!1sru!2sua!4v1540657695934" width="100%" height="450" frameborder="0" style="border:6" allowfullscreen></iframe>
 	</div>
-	
-<div id="footer">
-	<p>&copy; Запрошуємо до нас на навчання <a href="http://kvpu.co.ua/index.php?option=com_content&view=category&layout=blog&id=41&Itemid=313"  target="_blank">  Конотопське ВПУ</a>.</p>
-</div>
+            </div>
+        </div>
+    </div>
+    <footer id="myFooter">
+        <div class="container-fluid">
+            <div class="row">
+                	   <div class="col-sm-3 col-xs-12">
+                		<p>вул. 6 Вересня, 1 м. Конотоп<br>Сумська область	41600<br>Україна<br></p>
+                        </div>
+                        <div class="col-sm-3 col-xs-12">
+                        <p>Е-mail : <a href="mailto:metodist@kvpu.co.ua">metodist@kvpu.co.ua</a></p>
+		                  		                  Телефон : <a href="tel:+380544760690">(05447)6-06-90</a><br>
+		                  Телефон : <a href="tel:+380544760690">(05447)6-06-90</a>
+                	       </div> 
+                <div class="col-md-3 col-xs-12 social-networks">
+                    <a href="http://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
+                    <a href="http://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
+                    <a href="https://github.com/yakovenkoolga10/CK" target="_blank"><img src="images/github.svg" ></a> 
+                </div>
+                        </div>
+               
+            </div>
+        <div class="footer-copyright">
+            <p>Ольга Яковенко © 2018 Для проекту WOW Teachers</p>
+        </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 </html>
