--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/media.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -26,7 +26,7 @@
 			</div>
 			<div id="social">
 				<ul class="contact">
-					<li><a href="http://operatorcomp.blogspot.com" target="_blank" ><span>Блог циклової комісії</span></a></li>
+					<li><a href="https://operatorcomp.blogspot.com" target="_blank" ><span>Блог циклової комісії</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -71,14 +71,12 @@
 	<div class="text1 text">
 		<br>
 		<br>
-		<h3><b>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи
+        <h3><b>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</b></h3>
 	
 			
 	</div>
 	<div id="page" class="container">
-		
 		<div class="col-md-3 col-sm-6 col-xs-12">
-
 			<div class="title">
 				<h2>У ДПТНЗ "Конотопське ВПУ" з 3 грудня 2018 - 2019 навчального року буде проведено тиждень інформатики, інформаційних технологій, комп'ютерної та секртетарської справи</h2>
 				<img src="images/news1.jpg" alt="" />
@@ -103,7 +101,6 @@
 				<img src="images/news4.jpg" alt="" />
 			</div>
 		</div>
-
 	</div>
     <footer id="myFooter">
         <div class="container-fluid">
@@ -117,8 +114,8 @@
 		                  Телефон : <a href="tel:+380544760690">(05447)6-06-90</a>
                 	       </div> 
                 <div class="col-md-3 col-xs-12 social-networks">
-                    <a href="http://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
-                    <a href="http://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
+                    <a href="https://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
+                    <a href="https://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
                     <a href="https://github.com/yakovenkoolga10/CK" target="_blank"><img src="images/github.svg" ></a> 
                 </div>
                         </div>
@@ -128,8 +125,9 @@
             <p>Ольга Яковенко © 2018 Для проекту WOW Teachers</p>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    </div>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+         <script src="js/script.js"></script>
 </body>
 </html>
