--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div id="social">
 				<ul class="contact">
-					<li><a href="http://operatorcomp.blogspot.com" target="_blank" ><span>Блог циклової комісії</span></a></li>
+					<li><a href="https://operatorcomp.blogspot.com" target="_blank" ><span>Блог циклової комісії</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -142,7 +142,7 @@
 <h1 style="color:#3c6ca1; text-align: center;">Запрошуємо на навчання!</h1>
 
 <div class="row">
-    <div class="video-container"><iframe frameborder="0" height="300" src="http://www.youtube.com/embed/S_WIRZL_Ubw" width="100%"></iframe>
+    <div class="video-container"><iframe frameborder="0" height="300" src="https://www.youtube.com/embed/S_WIRZL_Ubw" width="100%"></iframe>
     </div></div>
  </div>
  </div>
@@ -158,8 +158,8 @@
 		                  Телефон : <a href="tel:+380544760690">(05447)6-06-90</a>
                 	       </div> 
                 <div class="col-md-3 col-xs-12 social-networks">
-                    <a href="http://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
-                    <a href="http://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
+                    <a href="https://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
+                    <a href="https://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
                     <a href="https://github.com/yakovenkoolga10/CK" target="_blank"><img src="images/github.svg" ></a> 
                 </div>
                         </div>
@@ -417,8 +417,8 @@
   </div>
 </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
