--- a/jurnal.html
+++ b/jurnal.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="fonts/font_awesome.css" rel="stylesheet" />
 <link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/media.css" rel="stylesheet" type="text/css" media="all" />
@@ -83,8 +83,8 @@
 		                  Телефон : <a href="tel:+380544760690">(05447)6-06-90</a>
                 	       </div> 
                 <div class="col-md-3 col-xs-12 social-networks">
-                    <a href="http://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
-                    <a href="http://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
+                    <a href="https://kvpu.co.ua/" target="_blank"><img src="images/school-filled.svg" ></a> 
+                    <a href="https://operatorcomp.blogspot.com/" target="_blank"><img src="images/blogger-filled.svg" ></a> 
                     <a href="https://github.com/yakovenkoolga10/CK" target="_blank"><img src="images/github.svg" ></a> 
                 </div>
                         </div>
@@ -94,8 +94,9 @@
             <p>Ольга Яковенко © 2018 Для проекту WOW Teachers</p>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </div>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
 </body>
 </html>
